--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -9,5 +9,14 @@
         android:id="@+id/mainFragment"
         android:label="@string/app_name"
         android:name="com.lime.android.fragments.home.HomeFragment"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_mainFragment_to_truckListFragment"
+            app:destination="@id/truckListFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/truckListFragment"
+        android:name="com.lime.android.fragments.trucklist.TruckListFragment"
+        android:label="TruckListFragment"
+        tools:layout="@layout/fragment_truck_list"/>
 </navigation>
