--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,17 @@
     <dimen name="spacing_5_dp">5dp</dimen>
     <dimen name="dim_3_dp">3dp</dimen>
     <dimen name="dim_45_dp">45dp</dimen>
+    <dimen name="dim_60_dp">60dp</dimen>
     <dimen name="dim_10_dp">10dp</dimen>
     <dimen name="dim_25_dp">25dp</dimen>
+    <dimen name="dim_18_sp">18sp</dimen>
+    <dimen name="dim_13_sp">13sp</dimen>
+    <dimen name="dim_100_dp">100dp</dimen>
+    <dimen name="dim_10_sp">10sp</dimen>
+    <dimen name="dim_2_dp">2dp</dimen>
+    <dimen name="dim_70_dp">70dp</dimen>
+    <dimen name="dim_120_dp">120dp</dimen>
+    <dimen name="dim_50_dp">50dp</dimen>
+    <dimen name="dim_12_sp">12sp</dimen>
+    <dimen name="dim_15_dp">15dp</dimen>
 </resources>
