--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="@dimen/dim_30_dp"
     android:height="@dimen/dim_30_dp"
-    android:viewportWidth="64"
-    android:viewportHeight="64">
+    android:viewportWidth="387.7"
+    android:viewportHeight="387.7">
   <path
-      android:fillColor="#FFFFFF"
-      android:pathData="m54,30h-39.899l15.278,-14.552c0.8,-0.762 0.831,-2.028 0.069,-2.828 -0.761,-0.799 -2.027,-0.831 -2.828,-0.069l-17.448,16.62c-0.755,0.756 -1.172,1.76 -1.172,2.829 0,1.068 0.417,2.073 1.207,2.862l17.414,16.586c0.387,0.369 0.883,0.552 1.379,0.552 0.528,0 1.056,-0.208 1.449,-0.621 0.762,-0.8 0.731,-2.065 -0.069,-2.827l-15.342,-14.552h39.962c1.104,0 2,-0.896 2,-2s-0.896,-2 -2,-2z"/>
+      android:pathData="M313.7,182.9L96.3,182.9l83.2,-79.3c4.4,-4.2 4.5,-11.1 0.4,-15.4c-4.2,-4.3 -11,-4.5 -15.4,-0.4l-95.1,90.6c-4.1,4.1 -6.4,9.6 -6.4,15.4c0,5.8 2.3,11.2 6.6,15.6l94.9,90.4c2.1,2 4.8,3 7.5,3c2.9,0 5.7,-1.1 7.9,-3.4c4.2,-4.4 4,-11.3 -0.4,-15.4l-83.6,-79.3h217.8c6,0 10.9,-4.9 10.9,-10.9C324.6,187.8 319.7,182.9 313.7,182.9z"
+      android:fillColor="#ffffff"/>
 </vector>
