--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#000000</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="black_unselected">#292929</color>
     <color name="form_bg_color">#eeeeee</color>
     <color name="icon_tint_color">#797979</color>
 </resources>
