--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,6 @@
     <dimen name="dim_50_dp">50dp</dimen>
     <dimen name="dim_12_sp">12sp</dimen>
     <dimen name="dim_15_dp">15dp</dimen>
+    <dimen name="dim_150_dp">150dp</dimen>
+    <dimen name="dim_25_sp">25sp</dimen>
 </resources>
