--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,10 @@
     <dimen name="dim_15_dp">15dp</dimen>
     <dimen name="dim_150_dp">150dp</dimen>
     <dimen name="dim_25_sp">25sp</dimen>
+    <dimen name="dim_16_sp">16sp</dimen>
+    <dimen name="dim_180_dp">180dp</dimen>
+    <dimen name="dim_52_dp">52dp</dimen>
+    <dimen name="dim_80_dp">80dp</dimen>
+    <dimen name="dim_160_dp">160dp</dimen>
+    <dimen name="dim_23_dp">23dp</dimen>
 </resources>
