--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,8 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+    <style name="themeCheck">
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
 </resources>
