--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,6 +46,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <RadioGroup
+        android:id="@+id/rdg_customer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dim_30_dp"
@@ -57,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/individual"
+            android:checked="true"
             app:rd_fontName="lato_regular.ttf"/>
 
         <com.lime.android.ui.customview.robotoradiobutton.RobotoRadioButton
@@ -101,6 +103,7 @@
         android:inputType="phone"
         android:textSize="@dimen/dim_15_sp"
         android:maxLines="1"
+        android:maxLength="10"
         android:textColor="@color/colorPrimary"
         app:et_fontName="lato_regular.ttf"/>
 
