--- a/app/src/main/res/drawable/horizontal_dash_line.xml
+++ b/app/src/main/res/drawable/horizontal_dash_line.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:top="1dp"
-        android:right="1dp"
-        android:left="1dp">
+        android:top="@dimen/dim_1_dp"
+        android:right="@dimen/dim_1_dp"
+        android:left="@dimen/dim_1_dp">
         <shape>
             <solid android:color="@android:color/transparent"/>
             <stroke
-                android:width="1dp"
+                android:width="@dimen/dim_1_dp"
                 android:color="@color/border"
-                android:dashGap="4dp"
-                android:dashWidth="4dp"/>
+                android:dashGap="@dimen/dim_4_dp"
+                android:dashWidth="@dimen/dim_4_dp"/>
         </shape>
     </item>
 </layer-list>
