--- a/app/src/main/res/layout/fragment_additional_details.xml
+++ b/app/src/main/res/layout/fragment_additional_details.xml
@@ -136,19 +136,21 @@
         android:layout_height="@dimen/dim_45_dp"
         android:orientation="horizontal">
 
-        <com.lime.android.ui.customview.robototextview.RobotoTextView
+        <com.lime.android.ui.customview.robotoedittext.RobotoEditText
+            android:id="@+id/et_weight"
             android:layout_width="0dp"
-            android:layout_weight="0.75"
             android:layout_height="@dimen/dim_45_dp"
+            android:layout_weight="0.75"
             android:background="@drawable/edit_text_bg"
-            android:hint="@string/weight_ton_kg"
-            android:textColorHint="@color/icon_tint_color"
-            android:gravity="center_vertical"
-            android:textSize="@dimen/dim_15_sp"
-            android:textColor="@color/colorPrimary"
             android:drawablePadding="@dimen/spacing_5_dp"
+            android:gravity="center_vertical"
+            android:hint="@string/weight_ton_kg"
             android:paddingLeft="@dimen/dim_15_dp"
-            app:et_fontName="lato_regular.ttf"/>
+            android:inputType="numberDecimal"
+            android:textColor="@color/colorPrimary"
+            android:textColorHint="@color/icon_tint_color"
+            android:textSize="@dimen/dim_15_sp"
+            app:et_fontName="lato_regular.ttf" />
 
         <RelativeLayout
             android:layout_width="0dp"
